Bug 447951 - Renaming to itself locks Kate
Summary: Renaming to itself locks Kate
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: application (other bugs)
Version First Reported In: 21.12.0
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-01-04 23:28 UTC by MisterE
Modified: 2022-01-05 07:43 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Example (203.08 KB, video/x-matroska)
2022-01-04 23:28 UTC, MisterE
Details

Note You need to log in before you can comment on or make changes to this bug.
Description MisterE 2022-01-04 23:28:21 UTC
Created attachment 145118 [details]
Example

SUMMARY
Renaming to itself locks Kate

STEPS TO REPRODUCE
1. Open file
2. Select the tab -> right mouse -> rename
3. Leave the name as is and apply

OBSERVED RESULT
It locks (2 popups)


EXPECTED RESULT
It should not be possible to rename to itself

SOFTWARE/OS VERSIONS
Suse Tumbleweed

ADDITIONAL INFORMATION
See the movie
Comment 1 Waqar Ahmed 2022-01-05 07:43:32 UTC
Git commit e50c8655cdd1894de5567508cbd654d4c4f27a70 by Waqar Ahmed.
Committed on 05/01/2022 at 07:40.
Pushed by waqar into branch 'master'.

Ignore rename if newName == oldName

M  +1    -1    kate/katefileactions.cpp

https://invent.kde.org/utilities/kate/commit/e50c8655cdd1894de5567508cbd654d4c4f27a70