Ignore rename if newName == oldName

BUG: 447951